--- a/sample-configs/letsencrypt-backup.conf
+++ b/sample-configs/letsencrypt-backup.conf
@@ -5,10 +5,10 @@
 #BACKUP="false"
 
 #true will start the docker even if it wasnt running when the backup started
-#FORCESTART="true"
+FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=('*-runtime' .icons '*.tmp')
+EXCLUDES=(fail2ban/filter.d)
 
-ARCHIVE_DAYS=0
-
+#Number of Archive tarred backups
+#ARCHIVE_DAYS=3
