--- a/sample-configs/organizrv2-backup.conf
+++ b/sample-configs/organizrv2-backup.conf
@@ -8,7 +8,7 @@
 #FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=('*-runtime' .icons '*.tmp')
+EXCLUDES=(Dashboard)
 
-ARCHIVE_DAYS=0
-
+#Number of Archive tarred backups
+#ARCHIVE_DAYS=1
