--- a/sample-configs/P3R-Firefox-Browser-backup.conf
+++ b/sample-configs/P3R-Firefox-Browser-backup.conf
@@ -1,5 +1,5 @@
 # docker timeout before force kill. Set to 0 to not stop the docker when backing it up
-#TIMEOUT=30
+TIMEOUT=0
 
 #false will prevent the docker from being backed up. Default True
 #BACKUP="false"
@@ -8,7 +8,7 @@
 #FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=('*-runtime' .icons '*.tmp')
+EXCLUDES=(cache2)
 
+#Number of Archive tarred backups
 ARCHIVE_DAYS=0
-
