--- a/sample-configs/nextcloud-backup.conf
+++ b/sample-configs/nextcloud-backup.conf
@@ -1,14 +1,11 @@
 # docker timeout before force kill. Set to 0 to not stop the docker when backing it up
-#TIMEOUT=30
+TIMEOUT=0
 
 #false will prevent the docker from being backed up. Default True
 #BACKUP="false"
 
 #true will start the docker even if it wasnt running when the backup started
-#FORCESTART="true"
+FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=('*-runtime' .icons '*.tmp')
-
-ARCHIVE_DAYS=0
-
+EXCLUDES=(www/nextcloud)
