more exclusion splitting

--- a/sample-configs/binhex-qbittorrentvpn-backup.conf
+++ b/sample-configs/binhex-qbittorrentvpn-backup.conf
@@ -8,7 +8,7 @@ TIMEOUT=0
 FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=('*.fastresume')
+EXCLUDES=(downloads/ cache/ '*.tmp' '*.fastresume')
 
 #Number of Archive tarred backups
 #ARCHIVE_DAYS=1
