--- a/sample-configs/plex-backup.conf
+++ b/sample-configs/plex-backup.conf
@@ -8,4 +8,4 @@
 #FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=(Plex?Media?Server/Cache Plex?Media?Server/Media Plex?Media?Server/Metadata Plex?Media?Server/Crash?Reports)
+EXCLUDES=(Plex?Media?Server/Cache Plex?Media?Server/Media Plex?Media?Server/Metadata Plex?Media?Server/Crash?Reports Caches/)
