update plexclusion, add jd exclusion

--- a/sample-configs/JDownloader2-backup.conf
+++ b/sample-configs/JDownloader2-backup.conf
@@ -8,4 +8,7 @@
 #FORCESTART="true"
 
 #Per Docker Excludes
-EXCLUDES=(Plex?Media?Server/Cache Plex?Media?Server/Media Plex?Media?Server/Metadata Plex?Media?Server/Crash?Reports Caches/ '*.db-20*')
+EXCLUDES=('*.tmp' '*.zip.backup')
+
+#Number of Archive tarred backups
+#ARCHIVE_DAYS=3
